--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "rra_base",
-  "private": true,
-  "dependencies": {
-    "@rails/actioncable": "^6.0.0",
-    "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.0",
-    "turbolinks": "^5.2.0"
-  },
-  "version": "0.1.0",
-  "devDependencies": {}
+	"name": "rra_base",
+	"private": true,
+	"proxy": "http://localhost:3001/",
+	"dependencies": {
+		"@rails/actioncable": "^6.0.0",
+		"@rails/activestorage": "^6.0.0",
+		"@rails/ujs": "^6.0.0",
+		"turbolinks": "^5.2.0"
+	},
+	"version": "0.1.0",
+	"devDependencies": {}
 }
